--- a/registration/organizational_project/templates/home.html
+++ b/registration/organizational_project/templates/home.html
@@ -1,1 +1,4 @@
-{% extends "base.html" %} {% block title %}changed{% endblock %}
+{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
+%}
+<h1>This should be fun</h1>
+{% endblock %}
