--- a/registration/organizational_project/templates/sign_up.html
+++ b/registration/organizational_project/templates/sign_up.html
@@ -10,6 +10,7 @@ content %}
       id="email"
       name="email"
       placeholder="Enter Email"
+      required
     />
   </div>
   <div class="form-group">
@@ -20,6 +21,7 @@ content %}
       id="FirstName"
       name="FirstName"
       placeholder="Enter Your First Name"
+      required
     />
   </div>
   <div class="form-group">
@@ -30,6 +32,7 @@ content %}
       id="password1"
       name="password1"
       placeholder="Enter Your Password"
+      required
     />
   </div>
   <div class="form-group">
@@ -40,6 +43,7 @@ content %}
       id="password2"
       name="password2"
       placeholder="Confirm Your Password"
+      required
     />
   </div>
   <br />
