--- a/registration/organizational_project/templates/sign_up.html
+++ b/registration/organizational_project/templates/sign_up.html
@@ -2,6 +2,12 @@
 content %}
 <form method="POST">
   <h3 align="center">Sign Up</h3>
+
+  <!-- Error Display -->
+  {% if error %}
+  <div class="alert alert-danger" role="alert">{{ error }}</div>
+  {% endif %}
+
   <div class="form-group">
     <label for="email">Email Address</label>
     <input
@@ -13,6 +19,7 @@ content %}
       required
     />
   </div>
+
   <div class="form-group">
     <label for="FirstName">First Name</label>
     <input
@@ -24,6 +31,7 @@ content %}
       required
     />
   </div>
+
   <div class="form-group">
     <label for="password1">Password</label>
     <input
@@ -35,6 +43,7 @@ content %}
       required
     />
   </div>
+
   <div class="form-group">
     <label for="password2">Password (confirm)</label>
     <input
@@ -46,6 +55,7 @@ content %}
       required
     />
   </div>
+
   <br />
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
