created table for database

--- a/registration/organizational_project/templates/login.html
+++ b/registration/organizational_project/templates/login.html
@@ -24,5 +24,7 @@
   </div>
   <br />
   <button type="submit" class="btn btn-primary">Login</button>
+  <br />
+  <h7><a href="/sign-up" align="center">Sign up</a></h7>
 </form>
 {% endblock %}
