--- a/registration/organizational_project/templates/sign_up.html
+++ b/registration/organizational_project/templates/sign_up.html
@@ -20,12 +20,12 @@ content %}
   </div>
 
   <div class="form-group">
-    <label for="FirstName">First Name</label>
+    <label for="first_name">First Name</label>
     <input
       type="text"
       class="form-control"
-      id="FirstName"
-      name="FirstName"
+      id="first_name"
+      name="first_name"
       placeholder="Enter Your First Name"
     />
   </div>
